--- a/taal-selectie.html
+++ b/taal-selectie.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/header.css" />
   </head>
   <body>
-    <header></header>
+    <header><img class="center" src="/fotos/haarlem_logo.png" alt="" /></header>
     <main>
       <div id="wrapper">
         <div id="engels">
